--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
+:root{
+    --primary-color: #2563EB
+}
+
 body{
     font-family: 'Montserrat', sans-serif;
 }
@@ -12,4 +16,22 @@ body{
 .container-center{
     max-width: 600px;
     margin:auto
+}
+
+.link{
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+}
+
+.link-primary{
+    background-color: var(--primary-color);
+    border-radius: 0.5rem;
+    color: white;
+}
+
+.link-secondary{
+    color:var(--primary-color);
+    border: 1px solid var(--primary-color);
+    border-radius: 0.5rem;
+
 }
