--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 
+hr{
+    margin: 2rem 0rem;
+}
+
 .container{
     padding-left: 1rem;
     padding-right: 1rem;
@@ -33,5 +37,16 @@ body{
     color:var(--primary-color);
     border: 1px solid var(--primary-color);
     border-radius: 0.5rem;
+
+}
+
+
+.list-non-bullet{
+    list-style: none;
+}
+
+.list-item-inline{
+    display: inline;
+    padding: 0rem 0.5rem;
 
 }
