--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
 :root{
-    --primary-color: #2563EB
+    --primary-color: #2563EB;
+    --dark-gray: #374151;
 }
 
 body{
@@ -72,4 +73,23 @@ hr{
 
 .navigation .link-active{
     font-weight: bold;
+}
+
+.hero{
+    padding:2rem;
+}
+
+.hero .hero-img{
+    max-width: 350px;
+    display:block;
+    margin: auto;
+}
+
+.hero .hero-heading{
+    padding-top: 1rem;
+    color: var(--dark-gray);
+}
+
+.hero .hero-heading .heading-inverted{
+    color: var(--primary-color);
 }
