--- a/styles.css
+++ b/styles.css
@@ -1,95 +1,109 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
 
-:root{
-    --primary-color: #2563EB;
-    --dark-gray: #374151;
-}
-
-body{
-    font-family: 'Montserrat', sans-serif;
-}
-
-hr{
-    margin: 2rem 0rem;
-}
-
-.container{
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
-
-.container-center{
-    max-width: 600px;
-    margin:auto
-}
-
-.link{
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-}
-
-.link-primary{
-    background-color: var(--primary-color);
-    border-radius: 0.5rem;
-    color: white;
-}
-
-.link-secondary{
-    color:var(--primary-color);
-    border: 1px solid var(--primary-color);
-    border-radius: 0.5rem;
+:root {
+  --primary-color: #2563eb;
+  --dark-gray: #374151;
+  --off-white:#F3F4F6;
 
 }
 
-
-.list-non-bullet{
-    list-style: none;
+body {
+  font-family: "Montserrat", sans-serif;
 }
 
-.list-item-inline{
-    display: inline;
-    padding: 0rem 0.5rem;
-
+hr {
+  margin: 2rem 0rem;
 }
 
-.navigation{
-    background-color: var(--primary-color);
-    color: white;
-    padding: 1rem;
-    border-bottom-left-radius: 1rem;
+.container {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
-.navigation .nav-brand{
-    font-weight: bold;
+.container-center {
+  max-width: 600px;
+  margin: auto;
 }
 
-.navigation .link{
-    color: white;
+.link {
+  text-decoration: none;
+  padding: 0.5rem 1rem;
 }
 
-.navigation .nav-pills{
-    text-align: right;
+.link-primary {
+  background-color: var(--primary-color);
+  border-radius: 0.5rem;
+  color: white;
 }
 
-.navigation .link-active{
-    font-weight: bold;
+.link-secondary {
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  border-radius: 0.5rem;
 }
 
-.hero{
-    padding:2rem;
+.list-non-bullet {
+  list-style: none;
 }
 
-.hero .hero-img{
-    max-width: 350px;
-    display:block;
-    margin: auto;
+.list-item-inline {
+  display: inline;
+  padding: 0rem 0.5rem;
 }
 
-.hero .hero-heading{
-    padding-top: 1rem;
-    color: var(--dark-gray);
+.navigation {
+  background-color: var(--primary-color);
+  color: white;
+  padding: 1rem;
+  border-bottom-left-radius: 1rem;
 }
 
-.hero .hero-heading .heading-inverted{
-    color: var(--primary-color);
+.navigation .nav-brand {
+  font-weight: bold;
 }
+
+.navigation .link {
+  color: white;
+}
+
+.navigation .nav-pills {
+  text-align: right;
+}
+
+.navigation .link-active {
+  font-weight: bold;
+}
+
+.hero {
+  padding: 2rem;
+}
+
+.hero .hero-img {
+  max-width: 350px;
+  display: block;
+  margin: auto;
+}
+
+.hero .hero-heading {
+  padding-top: 1rem;
+  color: var(--dark-gray);
+}
+
+.hero .hero-heading .heading-inverted {
+  color: var(--primary-color);
+}
+
+
+.section{
+    padding: 2rem;
+}
+
+.section h1 {
+  text-align: center;
+}
+
+.ow{
+    background-color: var(--off-white);
+}
+
+
