--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,12 @@
 :root {
   --primary-color: #2563eb;
   --dark-gray: #374151;
-  --off-white:#F3F4F6;
-
+  --off-white: #f3f4f6;
 }
 
 body {
   font-family: "Montserrat", sans-serif;
+  margin: 0px;
 }
 
 hr {
@@ -87,23 +87,40 @@ hr {
 .hero .hero-heading {
   padding-top: 1rem;
   color: var(--dark-gray);
+  text-align: center;
 }
 
 .hero .hero-heading .heading-inverted {
   color: var(--primary-color);
 }
 
-
-.section{
-    padding: 2rem;
+.section {
+  padding: 2rem;
 }
 
 .section h1 {
   text-align: center;
 }
 
-.ow{
-    background-color: var(--off-white);
+.ow {
+  background-color: var(--off-white);
 }
 
+.footer {
+  background-color: var(--primary-color);
+  padding: 2rem 1rem;
+  color: white;
+  text-align: center;
+  border-top-right-radius: 1rem;
+}
 
+.footer-header {
+  font-weight: bold;
+}
+.footer .link {
+  color: white;
+}
+
+.footer ul {
+  padding-inline-start: 0px;
+}
